--- a/president.html
+++ b/president.html
@@ -17,10 +17,14 @@
 
 
 <p id="result">This text will be replaced.... </p>
+<div>
+    <img src="Accipitridae.jpg" id="bird_img" width="100" height="100" onclick="swapImage()">
+</div>
 
 <script> 
 let correct = 0;
 let wrong = 0;
+console.log("Getting form values")
 function checkGuess (){
     secretname = document.getElementById("form1_secretpresidentname").value
     guessname = document.getElementById("form1_guesspresident").value
@@ -34,6 +38,30 @@ function checkGuess (){
         wrong = wrong + 1;
     }
     out.innerHTML = "correct = "+correct +"   wrong = " + wrong;
+}
+</script>
+<script>
+var useImage=1
+function swapImage(){
+    switch(useImage){
+       case 1:{
+          document.getElementById("bird_img").src="eagle.jpg"
+          useImage=2
+          break
+       }
+
+       case 2:{
+          document.getElementById("bird_img").src="blackswift.jpg"
+          useImage=3
+          break
+       }
+
+       case 3:{
+          document.getElementById("bird_img").src="Accipitridae.jpg"
+          useImage=1
+          break
+       }
+    }
 }
 </script>
 
