--- a/tips.html
+++ b/tips.html
@@ -39,7 +39,35 @@ function tips(){
     }
     document.getElementById('result').innerHTML=result;
 }
+function chooseOp(){
+    var amount = document.getElementById("check").value
+    var tip = document.getElementById("tip").value
+    exponent= document.getElementById("radio_3").checked
+    times= document.getElementById("radio_1").checked
+    divide=  document.getElementById("radio_2").checked
+    if(exponent){
+        document.getElementById('results').innerHTML="(amount ** Tip) value is:"+amount**tip
+    }
+    else if(times){  
+        document.getElementById('results').innerHTML="(amount * Tip) value is:"+amount*tip
+    }
+    else if(divide){   
+        document.getElementById('results').innerHTML="(amount / Tip) value is:"+amount/tip   
+    }
+}
 </script>
+<form>
+    <input type="radio" id="radio_1" name="radio_1"  value="times"  onclick="chooseOp()">
+    <label for="radio_1">*</label></br>
 
+    <input type="radio" id="radio_2" name="radio_1" onclick="chooseOp()" value="divide">
+    <label for="radio_2">/</label></br>
+
+    <input type="radio" id="radio_3" name="radio_1"  onclick="chooseOp()" value="exponent">
+    <label for="radio_3">**</label></br>
+
+  </form>
+
+  <p id="results">result will be displayed here</p>
 </body>
 </html> 
