Added style using bootstrap

--- a/president.html
+++ b/president.html
@@ -10,7 +10,7 @@
         }
     
         p {
-            background-color: rgb(204, 172, 204);
+            background-color: rgb(212, 31, 31);
             color: white;
             display: inline;
         }
@@ -21,8 +21,8 @@
             display: inline;
         }
     
-        h2 {
-            background-color: rgb(230, 162, 207);
+        h1 {
+            background-color: rgba(182, 55, 140, 0.548);
             color: white;
             display: inline-block;
             font-family: 'Times New Roman', Times, serif;
